--- a/index.html
+++ b/index.html
@@ -12,10 +12,32 @@
 </head>
 <body>
     <header>
-
-
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary navbar-expand-md">
+            <a class="navbar-brand" href="#">Balanced Training Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="gym.html">Gym</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
     </header>
     <section>
+      Excepturi quos in sequi odio temporibus adipisci architecto omnis! Facere temporibus consequuntur nam nulla alias ea molestiae fugit magni maiores quisquam, vero vitae et unde molestias ut aspernatur reprehenderit. Tenetur.
+      Reprehenderit saepe molestiae rem necessitatibus debitis itaque praesentium? Nihil similique harum quasi eum quod error cum, libero pariatur minima, quis in sunt perferendis fugit quam repellat perspiciatis officia velit excepturi.
 
 
     </section>
