--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary navbar-expand-md">
-            <a class="navbar-brand" href="#">Balanced Training Logo</a>
+        <nav class="navbar fixed-top navbar-light navbar-expand-md">
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" height="50px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item active hvr-radial-out">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-radial-out">
                   <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-radial-out">
                   <a class="nav-link" href="gym.html">Gym</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
+                <li class="nav-item hvr-radial-out">
+                  <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
