--- a/ptst.html
+++ b/ptst.html
@@ -20,11 +20,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active hvr-radial-out">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item hvr-radial-out">
-                  <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item hvr-radial-out active">
+                  <a class="nav-link" href="ptst.html">PT & Sports Therapy<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item hvr-radial-out">
                   <a class="nav-link" href="gym.html">Gym</a>
@@ -38,8 +38,6 @@
       </div>
     </header>
     <section>
-
-      <img src="assets/images/Gym A3 narrow.jpg" width="100%" transparen="50%"/>
 
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi expedita iusto possimus culpa delectus, incidunt ipsam. Iusto nihil qui vero nemo dolorum reprehenderit voluptate rerum sapiente, delectus, perspiciatis tenetur adipisci!
       Porro nesciunt nisi nostrum veritatis, amet eligendi voluptatem consequuntur earum quam temporibus, corporis praesentium. Doloremque similique error dolores vel voluptatibus quis est! Quia quo cupiditate quis excepturi asperiores voluptatum architecto?
