--- a/index.html
+++ b/index.html
@@ -13,23 +13,37 @@
 <body>
     <header>
       <div>
+        <!--<ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Disabled</a>
+          </li>
+        </ul>-->
         <nav class="navbar fixed-top navbar-light navbar-expand-md shadow p-3 mb-4 bg-white">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="50px"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active hvr-radial-out">
+                <li id="active" class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item hvr-radial-out">
+                <li class="nav-item ">
                   <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
                 </li>
-                <li class="nav-item hvr-radial-out">
+                <li class="nav-item ">
                   <a class="nav-link" href="gym.html">Gym</a>
                 </li>
-                <li class="nav-item hvr-radial-out">
+                <li class="nav-item ">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
               </ul>
@@ -38,47 +52,100 @@
       </div>
     </header>
     <section>
+       <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img src="assets/images/Gym A3 narrow.jpg" class="d-block w-100" alt="Picture of Gym">
+            </div>
+            <div class="carousel-item">
+            <img src="assets/images/Maxgym.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        </div>-->
+        <div id="myCarousel" class="carousel slide"
+        data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <h1>Example Headline</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  Laborum necessitatibus vitae aliquam tempore nemo at </p>
+                  <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <h1>2nd Headline</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Laborum necessitatibus vitae aliquam tempore nemo at </p>
+                    <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+              </div>
+            </div>
+          </div>
+          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>      
+          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>  
+      
+      </div>
 
-      <img src="assets/images/Gym A3 narrow.jpg" width="100%" transparen="50%"/>
 
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi expedita iusto possimus culpa delectus, incidunt ipsam. Iusto nihil qui vero nemo dolorum reprehenderit voluptate rerum sapiente, delectus, perspiciatis tenetur adipisci!
-      Porro nesciunt nisi nostrum veritatis, amet eligendi voluptatem consequuntur earum quam temporibus, corporis praesentium. Doloremque similique error dolores vel voluptatibus quis est! Quia quo cupiditate quis excepturi asperiores voluptatum architecto?
-      Possimus odit quibusdam atque, repudiandae necessitatibus ipsam ab dolorem quasi aliquam ipsa voluptatem molestias soluta aliquid voluptas dolorum inventore! Ipsa rerum nulla fugiat eaque facilis at nobis aut eos error?
-      Cupiditate eaque ex nisi optio, ratione veniam eius hic iure dicta obcaecati ab corporis quis laborum enim necessitatibus distinctio dignissimos blanditiis commodi exercitationem. Est fuga nemo exercitationem consequuntur cumque adipisci!
-      Voluptates eligendi expedita, deserunt eum libero quod, assumenda velit architecto voluptatibus minima, mollitia dolore ullam! Eos illo ratione, quisquam laborum quasi delectus maxime praesentium, dignissimos nihil magnam voluptas ut consequuntur.
-      Culpa vel recusandae quae iste officiis minus, optio molestiae omnis unde enim perspiciatis dignissimos suscipit dicta exercitationem, non modi ducimus veritatis. Cum eligendi saepe fugiat eos quis non architecto! Voluptate!
-      Optio dolor expedita voluptatum enim a veritatis ratione perspiciatis commodi laborum voluptate quidem accusantium repellendus minima voluptas autem mollitia, eius totam est at! Laborum dolorum sed, placeat ipsam quas repellat?
-      Vitae voluptatibus explicabo consequatur ex vel soluta corporis dicta architecto dolorum nihil alias similique mollitia sapiente reprehenderit nobis amet nostrum blanditiis, veritatis dolorem tenetur. Aperiam officiis animi assumenda dicta rem.
-      Ipsa inventore voluptatem laudantium cum, voluptates quae in ad quisquam rerum facere animi doloremque incidunt at eaque aliquam porro quam, qui nam, non corrupti saepe ullam. Aperiam ut vitae voluptatem.
-      Velit officiis assumenda eius nobis explicabo itaque? Nihil porro reiciendis minima optio nam saepe, assumenda praesentium est, illum magni odio, earum vel veniam cupiditate dolores. A soluta deserunt laborum at!
-      Necessitatibus accusantium porro iusto nisi nostrum ex exercitationem eveniet voluptatum labore, molestias mollitia nesciunt accusamus modi quidem aliquid consectetur maxime. Facilis labore quasi, expedita in dolores exercitationem sit repellendus nihil!
-      Ducimus dignissimos modi accusantium blanditiis nesciunt pariatur rerum impedit voluptas qui! Ipsam modi dolores quod quam nulla a, facere, fuga reiciendis veniam impedit, ea corporis beatae ullam perferendis ratione nemo!
-      Obcaecati voluptatum ad dolor inventore, omnis, vel fugit explicabo porro laborum facilis labore praesentium, nostrum accusantium nobis dicta natus sint qui ipsa non. Corporis iusto fuga animi odit vero mollitia!
-      Vero sapiente maxime exercitationem doloribus officiis! Odit est dolorem aliquam et minus, sed tenetur nam quod possimus nobis dolorum deleniti veniam esse excepturi voluptatum, placeat quia tempore praesentium error iure?
-      Explicabo ex magnam eos! Dolores consectetur sint ipsum sapiente. Voluptates, debitis, explicabo eligendi facilis repellat, aut omnis facere ipsa dolorem quisquam quasi suscipit et beatae. Maxime fugit dicta cupiditate facere.
-      Odit sed dolorem molestiae dicta velit, eius praesentium quam? Non tempore nesciunt numquam quod doloribus voluptatibus quae aperiam odit optio amet enim ullam illum voluptatem, a commodi labore ducimus voluptas.
-      Excepturi soluta dolorum facilis, sint adipisci beatae iusto fuga neque, non iste maiores dicta dolore numquam quidem magni vitae id perferendis quos sequi placeat eaque consequatur eligendi atque? Magni, dignissimos.
-      Quasi aut voluptatem nulla est doloribus perspiciatis aliquam! Id illum animi eveniet distinctio! Soluta cumque eaque maxime assumenda ea maiores eum corporis voluptates nihil vero! Voluptatem nobis eligendi aliquid temporibus.
-      Amet rerum blanditiis tenetur fuga animi nam, molestias dolorem saepe. Porro dolorum error quos ratione sit beatae laborum. Necessitatibus nulla ex similique repudiandae? Deserunt, veniam? Provident pariatur aliquid modi ratione.
-      Ullam officiis, corrupti autem quo nisi harum obcaecati reprehenderit magnam ut assumenda repellendus aut iure explicabo hic dolorem ratione ab dolores beatae? Deserunt facilis repudiandae porro consectetur nisi optio facere?
-      Soluta, quis? Obcaecati vero deleniti, eligendi cupiditate accusantium dolor id perferendis iusto quia reprehenderit veritatis magni quo animi ab ad numquam aperiam laborum provident asperiores minus nihil atque ex repellendus?
-      Quod sunt, nihil consectetur dolore aperiam qui fugit omnis laborum iure alias atque sed? Ipsam consequatur itaque sint fugit magni minus provident dignissimos eaque debitis! Ipsum dolore qui ea laborum.
-      Accusamus dolorem quisquam libero placeat aliquam. Aspernatur harum veniam tempora incidunt! Alias, deleniti! A, ad? Repudiandae dolor modi vero qui optio exercitationem. Sint odio nulla quas dignissimos officia natus incidunt.
+        <!--<div class="container">
+          <div class="row ">
+            <div class="col-4 first no-gutters">
+               Non tempore nesciunt numquam quod doloribus voluptatibus quae aperiam odit optio amet enim ullam illum voluptatem, a commodi labore ducimus voluptas.
+      Eceat aliquam. Aspernatur harum veniam tempora incidunt! Alias, deleniti! A, ad? Repudiandae dolor modi vero qui optio exercitationem. Sint odio nulla quas dignissimos officia natus incidunt.
       Facilis natus dolorum ut aliquid eos accusantium perferendis quidem laboriosam illum. Ullam magni veritatis facere beatae voluptates repellendus optio ut deserunt labore praesentium temporibus, in ipsa blanditiis dicta tenetur eius?
       Mollitia nemo atque porro maiores quam cupiditate voluptates vitae sapiente et cumque perferendis placeat, error molestiae corporis ipsam officiis nesciunt blanditiis incidunt expedita. Minus provident ipsam atque a quo voluptas!
-      Dolor soluta culpa repellendus maxime autem voluptas sapiente hic quisquam nesciunt sed, magni tempora qui quaerat, dignissimos veritatis atque, in aperiam cumque ut ratione velit nisi. Natus autem excepturi atque?
-      Nobis doloribus laudantium doloremque nesciunt? Minima amet, quo neque voluptate placeat laudantium, ex in earum exercitationem magnam beatae magni dolores qui doloremque reiciendis a blanditiis distinctio fugit, expedita quia atque.
-      Officia voluptate nihil eveniet voluptatibus eum qui expedita, maiores quam magni sit! Omnis eius adipisci voluptatibus illo accusantium officiis assumenda, temporibus amet repudiandae. Cum facere dolorem aut magni maiores! Minus?
-      Cum modi ipsa deleniti molestiae nostrum cupiditate commodi dolor, dignissimos laborum, eum ullam. Et incidunt fugiat, dignissimos officia aut labore quo qui amet fugit. Alias optio corrupti accusantium suscipit tempore.
+      Dolor soluta culpa r
+            </div>
+            <div class="col-4 second">
+i molestiae nostrum cupiditate commodi dolor, dignissimos laborum, eum ullam. Et incidunt fugiat, dignissimos officia aut labore quo qui amet fugit. Alias optio corrupti accusantium suscipit tempore.
       Repellat, magni deserunt. Delectus, facere porro eveniet deleniti neque reiciendis atque dolorem voluptates ea et modi facilis error perferendis quae sapiente? Magnam, magni velit labore laudantium nam voluptates at fugiat?
       Tempore atque aspernatur sapiente recusandae magni dignissimos eveniet dicta culpa rerum, adipisci, inventore quae ad praesentium quos assumenda eaque totam commodi natus odit corrupti hic deleniti quo. Eos, voluptatum porro.
       Vel, quisquam? Asperiores hic dolorem reiciendis molestiae, laborum, quas nesciunt consectetur eum omnis provident, ea dolore nostrum consequuntur officiis quis id. Consequuntur veritatis reiciendis harum deleniti aperiam quod labore impedit!
       Pariatur deleniti possimus vero corporis, eius rem eaque maiores culpa hic fugiat accusamus, ratione eum! Voluptatum incidunt ut facere, veritatis sed aliquid officia eum! Illo ipsam facilis eveniet inventore sit?
       Recusandae placeat non vel eaque expedita ipsam commodi aliquid earum perspiciatis consequatur doloremque, amet eius, nihil accusantium inventore repellat laudantium dicta id? Placeat excepturi, dolorum pariatur inventore consequatur vel. Voluptas.
-      Eveniet illum nemo praesentium tempore quibusdam quia in quas, fugit soluta inventore? Itaque quos accusamus modi, repellat ullam ab a nisi quo, dolore architecto, rerum natus porro sequi sint recusandae!
+      Eveniet illum nemo praesentium tempor
+
+            </div>
+            <div class="col-4 third">
+              axime autem voluptas sapiente hic quisquam nesciunt sed, magni tempora qui quaerat, dignissimos veritatis atque, in aperiam cumque ut ratione velit nisi. Natus autem excepturi atque?
+      Nobis doloribus laudantium doloremque nesciunt? Minima amet, quo neque voluptate placeat laudantium, ex in earum exercitationem magnam beatae magni dolores qui doloremque reiciendis a blanditiis distinctio fugit, expedita quia atque.
+      Officia voluptate nihil eveniet voluptatibus eum qui expedita, maiores quam magni sit! Omnis eius adipisci voluptatibus illo accusantium officiis assumenda, temporibus amet repudiandae. Cum facere dolorem aut magni maiores! Minus?
+      Cum modi ipsa delenite quibusdam quia in quas, fugit soluta inventore? Itaque quos accusamus modi, repellat ullam ab a nisi quo, dolore architecto, rerum natus porro sequi sint recusandae!
       Ducimus architecto exercitationem porro quasi voluptatibus sed dolores corporis quod, ipsa eum suscipit fugiat earum eaque ipsum nam iusto aliquid assumenda repudiandae tempora amet magni iure laboriosam, ea illum! Labore!
       Veritatis deleniti impedit fugit vel. Praesentium est minus illo omnis laborum odio deserunt accusamus id magnam asperiores consequuntur reprehenderit, perspiciatis cum debitis? Ab laborum magni tempore quasi blanditiis? Qui, repellat!
-      Dolorem modi suscipit rerum porro nisi autem quisquam fuga architecto, ad maxime consequuntur alias assumenda, temporibus incidunt aspernatur? Inventore et molestiae suscipit nemo quia molestias aut voluptates earum ipsa placeat?
+      Dolorem modi suscipit rerum porro nisi a
+            </div>
+          </div>
+
+        </div>
+esentium quam?epellendus mutem quisquam fuga architecto, ad maxime consequuntur alias assumenda, temporibus incidunt aspernatur? Inventore et molestiae suscipit nemo quia molestias aut voluptates earum ipsa placeat?
       Repudiandae deleniti numquam eos dignissimos, cum voluptatum quasi quis ut eveniet expedita obcaecati? Ex, asperiores minima quam soluta accusamus sequi nisi omnis veritatis voluptas provident, cum placeat ea. Natus, laborum!
       Nesciunt doloribus dolorem ipsam cumque incidunt temporibus consequuntur! Ipsa, dolore. Delectus dolores odio accusantium debitis incidunt! Blanditiis, molestiae totam nesciunt quod et fugit corporis eum est debitis, officiis sunt deserunt.
       Rem ad perferendis natus error neque odit nihil deleniti laudantium, iusto fugit aliquam placeat temporibus ducimus repellendus, magni adipisci illum unde et enim quam hic! Dolores voluptas temporibus culpa beatae.
@@ -91,7 +158,7 @@
       Saepe dolore ad mollitia perferendis libero aperiam tempore debitis? Officiis, iusto consequuntur rem voluptatibus dolorem similique doloribus optio, exercitationem aperiam voluptatem excepturi aliquam ullam ipsum magnam debitis aut facilis est.
       Aliquam quisquam aliquid odio id corrupti architecto obcaecati distinctio officia saepe! Cumque cupiditate dolores odio, provident, nostrum quo nam accusamus tempora eaque ea omnis quos, inventore perferendis unde iusto ullam!
       Quibusdam eius magni alias! Fugit adipisci tempore velit qui dolorum, obcaecati at sed dicta corrupti laudantium eum minus inventore amet esse autem numquam facere quod quasi? Vitae odit ex iusto.
-
+      -->
     </section>
     <footer>
 
