--- a/gym.html
+++ b/gym.html
@@ -12,6 +12,11 @@
   </head>
 <body>
     <header>
+      <div class="row">
+      <div class="col bg-secondary nogutters topcontact">
+        <h6>    Location - Unit A3 Seedbed   -   Phone - 07764496281/ 01702 382390 </h6>
+      </div>
+    </div>
       <div>
         <nav class="navbar fixed-top navbar-light navbar-expand-md shadow p-3 mb-4 bg-white">
           <a class="navbar-brand" href="index.html"><img src="assets/images/logo_blue.png" height="60px"></a>
@@ -23,13 +28,13 @@
               <li class="nav-item bg-primary">
                 <a class="nav-link" href="contact.html">Book Training</a>
               </li>
-              <li id="active" class="nav-item">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
               </li>
-              <li class="nav-item active">
+              <li id="active" class="nav-item active">
                 <a class="nav-link" href="gym.html">Gym</a>
               </li>
               <li class="nav-item ">
@@ -93,6 +98,17 @@
 
     </section>
     <footer>
+      <div class="row bg-primary footer">
+        <div class="col-4">
+        4-5 pages
+        </div>
+        <div class="col-4">
+          blank
+        </div>
+        <div class="col-4">
+          social media icons and links
+        </div>
+      </div>
 
 
     </footer>
