--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,16 @@
                   <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html" aria-current="page">Home</a>
+                  <a class="nav-link" href="index.html" aria-current="page">Home </a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link" href="ptst.html">PT & Sports Therapy</a>
                 </li>
-                <li id="active" class="nav-item active">
-                  <a class="nav-link" href="gym.html">Gym<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="gym.html">Gym</a>
+                </li>
+                <li id="active" class="nav-item active">
+                  <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
                 </li>
               </ul>
             </div>
