--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <div class="carousel-caption text-end">
                 <h1>Get Training</h1>
                 <p>Book your training sessions here.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">Book Training</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></p>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
         </button>
       </div>
       <div class="container-fluid no-padding">
-        <div class="col-12 spacer"></div>
+        <div class="col-12 spacer"><a href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></div>
         <div class="row">
           <div class="col-12 col-md-6 col-lg-8">
             <br>
