Spacer Button update

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
         </button>
       </div>
       <div class="container-fluid no-padding">
-        <div class="col-12 spacer"><a href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></div>
+        <div class="col-12 spacer"><a class="button-border align-middle btn d-lg-none" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a></div>
+       
+       
         <div class="row">
           <div class="col-12 col-md-6 col-lg-8">
             <br>
