--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
     <footer>
       <div class="row footer bg-dark justify-content-center">
         <div class="col-5 footer-left">
-        4-5 pages
+          <p>A3 Seedbed Business Centre,</p>
+          <p>Vanguard Way,</p>
+          <p>Shoeburyness,</p>
+          <p>SS3 0JB</p>
         </div>
         <div class="col-5 footer-right">
           <div class="social-bottom row">
