--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <span class="input-group-text" id="basic-addon1">Message:</span>
               <textarea class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
             </div>
-            <div class="col-12 align-center">
+            <div class="input-group send-message-button">
               <button type="submit" class="btn btn-primary">Send Message</button>
             </div>
          </div>
@@ -203,15 +203,19 @@
     </section>
     <footer>
       <div class="row footer bg-dark justify-content-center">
-        <div class="col-5 footer-left">
-          <p>A3 Seedbed Business Centre,</p>
+        <div class="col-7 col-md-5 footer-left">
+          <p>Unit A3</p> 
+          <p class="word-wrap">Seedbed Business Centre,</p>
           <p>Vanguard Way,</p>
           <p>Shoeburyness,</p>
           <p>SS3 0JB</p>
+          <br>
+          <p><i class="bi bi-telephone-fill"></i> 01702 382390</p>
         </div>
-        <div class="col-5 footer-right">
+        <div class="col-5 col-md-5 footer-right">
+          <div class="footer-text-right">Follow us on</div>
           <div class="social-bottom row">
-            <div class="col">
+            <div class="col col-padding">
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank">
                 <i class="bi bi-facebook icon-size"></i></a></div>
             <div class="col">
