Gym updated top buttons

--- a/gym.html
+++ b/gym.html
@@ -66,11 +66,10 @@
       <div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-4 pt-tab">Personal Training
-            
+            <div class="col-4 pt-tab tab" onclick="location.href='/contact.html';">Personal Training</a>
             </div>
-            <div class="col-4 sm-tab">Sports Massage</div>
-            <div class="col-4 gm-tab">Memberships</div>
+            <div class="col-4 sm-tab tab">Sports Massage</div>
+            <div class="col-4 gm-tab tab">Memberships</div>
           </div>
         </div>
       </div>
