--- a/gym.html
+++ b/gym.html
@@ -44,7 +44,7 @@
       </div>
     </header>
     <section>
-      <div class="container-fluid no-padding">
+    <div class="container-fluid no-padding">
           <div class="row">
             <div class="col-3 topcontact">
               <a class="icon-link" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
@@ -62,18 +62,19 @@
                   <i class="bi bi-linkedin icon-size"></i></a></div>      
             </div>
           </div>
-      </div>
+    </div>
       <div>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-4 pt-tab tab" onclick="location.href='/contact.html';">Personal Training</a>
-            </div>
+        <div class="container-fluid prime-tab">
+          <div class="row bg-dark">
+            <div class="col-4 pt-tab tab" onclick="location.href='/contact.html';">Personal Training</a></div>
             <div class="col-4 sm-tab tab">Sports Massage</div>
             <div class="col-4 gm-tab tab">Memberships</div>
           </div>
         </div>
       </div>
-    
+    <div class="row bg-dark pt-header">
+      <p>Personal Training</p>
+    </div>
 
       <div class="container-fluid no-padding">
         <div class="col-12 spacer d-lg-none">
