--- a/gym.html
+++ b/gym.html
@@ -233,6 +233,13 @@
              <div class="container-fluid">
                <div class="row">
                  <div class="col-12 col-md-6">
+                  <ul class="list-group">
+                    <li class="list-group-item list-group-item-info"><h4>General Gym/Studio</h4></li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
+                  </ul>
                    Membership basic
                  </div>
                  <div class="col-12 col-md-6">
