--- a/gym.html
+++ b/gym.html
@@ -183,10 +183,8 @@
             </div>
           </div>
         </div>
-              </div>
-            </div>
-          </div>
         </div>
+      </div>
         <!--Sports Massage Accordion-->
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
@@ -226,24 +224,35 @@
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              You agree to be charged at the time of subscription based on the type of plan you have selected. 
-              Rolling memberships will be renewed automatically and billed to your payment card at the beginning 
-              of each subscription period until you cancel.</div>
-             <div class="container-fluid">
+            <div class="accordion-body"></div>
+             <div class="container-fluid membership-img">
                <div class="row">
                  <div class="col-12 col-md-6">
                   <ul class="list-group">
-                    <li class="list-group-item list-group-item-info"><h4>General Gym/Studio</h4></li>
+                    <li class="list-group-item list-group-item-info"><h4>Studio Membership</h4></li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
+                    <li class="list-group-item list-group-item-info"><h3>£24.99</h3></li>
+                    <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank"><h3>Get Started</h3></a></li>
                   </ul>
-                   Membership basic
                  </div>
                  <div class="col-12 col-md-6">
-                   Membership program
+                  <ul class="list-group">
+                    <li class="list-group-item list-group-item-info"><h4>Studio Membership & Plan</h4></li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Program based on initial goals</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Session with a Personal Trainer to work through plan</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
+                    <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Ongoing Support from our motivating trainers</li>
+                    <li class="list-group-item list-group-item-info"><h3>£74.95</h3></li> 
+                    <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank"><h3>Get Started</h3></a></li>
+                  </ul>
+                  You agree to be charged at the time of subscription based on the type of plan you have selected. 
+              Rolling memberships will be renewed automatically and billed to your payment card at the beginning 
+              of each subscription period until you cancel.
                  </div>
                </div>
              </div>
