--- a/gym.html
+++ b/gym.html
@@ -229,7 +229,7 @@
                <div class="row">
                  <div class="col-12 col-md-6">
                   <ul class="list-group">
-                    <li class="list-group-item list-group-item-info"><h4>Studio Membership</h4></li>
+                    <li class="list-group-item"><h4 class="list-header">Studio Membership</h4></li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Initial goal setting session</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Free Private Induction session</li>
@@ -238,9 +238,9 @@
                     <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank"><h3>Get Started</h3></a></li>
                   </ul>
                  </div>
-                 <div class="col-12 col-md-6">
+                 <div class="col-12 col-md-8 col-lg-6">
                   <ul class="list-group">
-                    <li class="list-group-item list-group-item-info"><h4>Studio Membership & Plan</h4></li>
+                    <li class="list-group-item"><h4 class="list-header">Studio Membership & Plan</h4></li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Program based on initial goals</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Session with a Personal Trainer to work through plan</li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Unlimited access to Studio facilities during Opening hours</li>
@@ -250,10 +250,9 @@
                     <li class="list-group-item list-group-item-info"><h3>£74.95</h3></li> 
                     <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank"><h3>Get Started</h3></a></li>
                   </ul>
-                  You agree to be charged at the time of subscription based on the type of plan you have selected. 
-              Rolling memberships will be renewed automatically and billed to your payment card at the beginning 
-              of each subscription period until you cancel.
                  </div>
+                 <p class="membership-agreement">Once setup the subscription is a rolling membership and will be renewed 
+                  each month close to the date originally sign-up until the time you wish to cancel.</p>
                </div>
              </div>
           </div>
