Gym page complete

--- a/gym.html
+++ b/gym.html
@@ -89,7 +89,7 @@
                     <p>There are many reasons people come to us and often it’s an accumulation of many different things.</p>
                     <br>
         
-                    <h3 class="get-in-contact btn">Get in Contact</h3>
+                    <h3 class="get-in-contact btn"><a href="#contactform">Get in Contact</a></h3>
                   </div>
                   <div class="col-12 col-md-4">
                   <img class="acc-pt-pic" src="assets/images/gym-front.JPG" alt="" width="200px">
@@ -98,13 +98,13 @@
                 <!--Tabs for PT-->
                 <div class="d-flex align-items-start top-tabs">
                   <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Indoors</button>
-                    <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Outdoors</button>
-                    <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Online</button>
-                    <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Programs</button>
+                    <button class="nav-link active" id="v-pills-home-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Indoors</button>
+                    <button class="nav-link" id="v-pills-profile-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Outdoors</button>
+                    <button class="nav-link" id="v-pills-messages-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Online</button>
+                    <button class="nav-link" id="v-pills-settings-tab tabcol" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Programs</button>
                   </div>
-                  <!--Indoor tab-->
                   <div class="tab-content" id="v-pills-tabContent">
+                  <!--Indoor tab-->
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                       <div class="container-fluid">
                         <div class="row">
@@ -128,7 +128,7 @@
                               <p>All together this offers some of the best focused personal training.</p>
                           </div>
                           <div class="col-12 col-sm-6">
-                            <img src="/assets/images/sarah-pt.jpg" alt="" width="250px">
+                            <img class="acc-tab-pic" src="/assets/images/sarah-pt.jpg" alt="" width="250px">
                           </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                       <div class="container-fluid">
                         <div class="row">
                           <div class="col-12 col-sm-4">
-                          <img src="/assets/images/outdoor-pt.jpg" alt="" width="250px">
+                          <img class="acc-tab-pic" src="/assets/images/outdoor-pt.jpg" alt="" width="250px">
                           </div>
                           <div class="col-12 col-sm-7">
                             <p>Training outdoors is a really fun way to get fit and have personal training. 
@@ -159,11 +159,12 @@
                             <p>Using technology like Zoom/Skype/Facebook/Whatsapp we will find a way to be able to be in contact with you.</p>
                           </div>
                           <div class="col-12 col-sm-5">
-                            <img src="/assets/images/online-pt.png" alt="" width="250px">
+                            <img class="acc-tab-pic" src="/assets/images/online-pt.png" alt="" width="250px">
                           </div>
                        </div>
                       </div>
                     </div>
+                    <!--Program tab-->
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                       <div class="container-fluid">
                         <div class="row">
@@ -173,7 +174,7 @@
                             <p></p>
                           </div>
                           <div class="col-12 col-sm-5">
-                            <img src="/assets/images/online-pt.png" alt="" width="250px">
+                            <img class="acc-tab-pic" src="/assets/images/tab-pic-prog.png" alt="" width="250px">
                           </div>
                        </div>
                       </div>
@@ -206,7 +207,7 @@
                     <p>Sports massage relaxes tight muscles, increases movement and blood flow to the area which will allow 
                     you to train more effectively and move more comfortably in your day-to-day life!</p>
                     <br>
-                    <h2 class="btn bg-secondary sm-tab-text-btn"><a href="https://www.google.com" target="_blank">Free Injury Assessment</a></h2>
+                    <h3 class="get-in-contact btn"><a href="#contactform">Free Injury Assessment</a></h3>
                   </div>
                   <div class="col-12 col-md-6">
                     <img class="acc-pt-pic" src="/assets/images/sarah-sm.jpeg" alt="">
@@ -238,7 +239,7 @@
                     <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL00035RP1FPVA" target="_blank"><h3>Get Started</h3></a></li>
                   </ul>
                  </div>
-                 <div class="col-12 col-md-8 col-lg-6">
+                 <div class="col-12 col-md-6">
                   <ul class="list-group">
                     <li class="list-group-item"><h4 class="list-header">Studio Membership & Plan</h4></li>
                     <li class="list-group-item list-group-item-info"><i class="bi bi-check-circle-fill"></i> Monthly Program based on initial goals</li>
@@ -251,18 +252,18 @@
                     <li class="list-group-item list-group-item-info btn get-started"><a href="https://pay.gocardless.com/AL0004CDGKQFY7" target="_blank"><h3>Get Started</h3></a></li>
                   </ul>
                  </div>
-                 <p class="membership-agreement">Once setup the subscription is a rolling membership and will be renewed 
-                  each month close to the date originally sign-up until the time you wish to cancel.</p>
+                 <p class="membership-agreement">After stting up the subscription membership is rolling and will be renewed 
+                  each month close to the day of month originally set up until the time you wish to cancel.</p>
                </div>
              </div>
           </div>
         </div>
       </div>
       <!--Form-->
-      <form>
+      <form id="contactform">
         <div class="container-fluid">
           <div class="row">
-            <h1 class="contact-top">Get in contact!</h1>
+            <h1 class="contact-top membership-contact">If you have any questions get in contact!</h1>
             <h2>If you'd like to find out more information please fill out the form below.</h2>
           </div>
           <dv class="row justify-content-center">
