Started on courses page

--- a/gym.html
+++ b/gym.html
@@ -77,10 +77,10 @@
               Personal Training <img class="icon" src="/assets/images/pt-icon-small.png" alt="">
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
             <div class="accordion-body">
               <div class="container-fluid">
-                <div class="row">
+                <div class="row top-tabs">
                   <div class="col-12 col-md-8">
                     <p>Personal training is by far the top service you can get in any gym and at Balanced Training we take it to the next level. 
                     Our mission is to empower our clients to achieve their goals and we are leading the way with personal training in Southend & Shoeburyness. 
@@ -193,7 +193,7 @@
               Sports Massage  <img class="icon" src="/assets/images/sm-icon-small.png" alt="">
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
             <div class="accordion-body">
               <div class="container-fluid">
                 <div class="row top-tabs">
@@ -224,7 +224,7 @@
               Memberships <img class="icon" src="/assets/images/gm-icon-small.png" alt="">
             </button>
           </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
             <div class="accordion-body"></div>
              <div class="container-fluid membership-img">
                <div class="row">
@@ -263,8 +263,8 @@
       <form id="contactform">
         <div class="container-fluid">
           <div class="row">
-            <h1 class="contact-top membership-contact">If you have any questions get in contact!</h1>
-            <h2>If you'd like to find out more information please fill out the form below.</h2>
+            <h1 class="contact-top membership-contact">Any questions or if you'd like a FREE Injury Assessment</h1>
+            <h2>Get in contact by filling out your information on the form below.</h2>
           </div>
           <dv class="row justify-content-center">
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
