--- a/courses.html
+++ b/courses.html
@@ -82,17 +82,19 @@
               <div class="container-fluid">
                 <div class="row top-tabs">
                   <div class="col-12 col-md-8">
-                    <p>Personal training is by far the top service you can get in any gym and at Balanced Training we take it to the next level. 
-                    Our mission is to empower our clients to achieve their goals and we are leading the way with personal training in Southend & Shoeburyness. 
-                    We have helped hundreds of people just like you, transform their bodies and mindset.</p>
-                    <p>At Balanced Training it is more than just ‘the session’ its about helping people change to what they want to become.</p>
-                    <p>There are many reasons people come to us and often it’s an accumulation of many different things.</p>
+                    <h3>Becoming a Personal Trainer</h3>
+                    <p>Personal training has always been the premium product in a gym environment.</p>
+                    <p>At Balanced Training we educate our learners how to actually be functional in the fitness industry
+                       and are able to start their careers the moment they receive their certificate for the course.</p>
+                    <p>The course is broken down into 2 parts initially the first being the Gym instructing course, 
+                      this gives a great overview of the job role of the basic gym instructor.</p>
+                      <p>The second part of the course is the personal trainer qualification this builds 
+                        on the basics learnt on the gym instructor course. </p>
                     <br>
-        
-                    <h3 class="get-in-contact btn"><a href="#contactform">Get in Contact</a></h3>
+                    <p>Below there is more information on each of the different courses we offer:</p>
                   </div>
                   <div class="col-12 col-md-4">
-                  <img class="acc-pt-pic" src="assets/images/pt-icon.png" alt="" width="200px">
+                  <img class="acc-pt-pic" src="assets/images/pt-icon-cropped.png" alt="" width="200px">
                   </div>
                 </div>
                 <!--Tabs for PT-->
@@ -107,28 +109,14 @@
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                       <div class="container-fluid">
                         <div class="row">
-                          <div class="col-12 col-sm-6">
-                            <p>
-                              Delivery of personal training in our studio is by far the most interactive way to personal train. 
-                              The environment is made for all types people wanting a private facility and almost feel like they are 
-                              training in their very own gym. We have all the main bits of kit and some cool extras:</p>
-                              <table class="table-width">
-                                <tr>
-                                  <td>Ski-Erg</td><td>Assault Bike</td><td>Resistance Machines</td>
-                                </tr>
-                                <tr>
-                                  <td>Rowers</td><td>TRX</td><td>Cable Machine</td>
-                                </tr>
-                                <tr>
-                                  <td>Treadmill</td><td>Free weights</td><td>Speciality Barbells</td>
-                                </tr>
-                              </table>
-                              <br>
-                              <p>All together this offers some of the best focused personal training.</p>
-                          </div>
-                          <div class="col-12 col-sm-6">
-                            <img class="acc-tab-pic" src="/assets/images/sm-icon.png" alt="" width="250px">
-                          </div>
+                          <div class="col-12">
+                            <h4>Certificate in Gym Instructing</h4>
+                            <p>The course has 6 units which are:</p>
+                              <li>Principles of anatomy, physiology and fitness</li>
+                              <li>Professionalism and customer care for fitness instructors</li>
+                              <li>Health and safety in the fitness environment</li>
+                              <li>Conducting client consultations to support positive behaviour change</li>
+                              <li>Planning and instructing gym-based exercise</li>
                         </div>
                     </div>
                     </div>
